style:main page ready

--- a/index.html
+++ b/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Know Triangles</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="main-div">
+      <h1>Know traingles</h1>
+      <div class="container">
+        <div class="col1">
+          <a href="#"
+            ><div class="gridItem"><p>Area</p></div></a
+          >
+          <a href="#"
+            ><div class="gridItem"><p>Quiz</p></div></a
+          >
+        </div>
+        <div class="col2">
+          <a href="#"
+            ><div class="gridItem"><p>hypoteneus</p></div></a
+          >
+          <a href="#"
+            ><div class="gridItem"><p>check traingle</p></div></a
+          >
+        </div>
+      </div>
+    </div>
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
