style:find area page done

--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
   </head>
   <body>
     <div class="main-div">
-      <h1>Know traingles</h1>
+      <h1 style="font-size: 3rem;">Know traingles</h1>
       <div class="container">
         <div class="col1">
-          <a href="#"
+          <a href="area.html"
             ><div class="gridItem"><p>Area</p></div></a
           >
           <a href="#"
             ><div class="gridItem"><p>Quiz</p></div></a
           >
         </div>
-        <div class="col2">
+        <div cl ass="col2">
           <a href="#"
             ><div class="gridItem"><p>hypoteneus</p></div></a
           >
           <a href="#"
-            ><div class="gridItem"><p>check traingle</p></div></a
+            ><div class="gridItem"><p>check triangle</p></div></a
           >
         </div>
       </div>
