feat:area calculate

--- a/area.html
+++ b/area.html
@@ -14,8 +14,8 @@
         <h1>Calculate area of triangle</h1>
         <form>
           <div>
-            <label>Base:<input type="number" /></label>
-            <label>Height:<input type="number" /></label>
+            <label>Base:<input type="number" required /></label>
+            <label>Height:<input type="number" required /></label>
           </div>
           <button type="submit">Calculate</button>
         </form>
@@ -27,5 +27,6 @@
         </div>
       </section>
     </div>
+    <script src="area.js"></script>
   </body>
 </html>
