feat:hypotenuse of traingle

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             ><div class="gridItem"><p>Quiz</p></div></a
           >
         </div>
-        <div cl ass="col2">
-          <a href="#"
-            ><div class="gridItem"><p>hypoteneus</p></div></a
+        <div class="col2">
+          <a href="hypotenuse.html"
+            ><div class="gridItem"><p>hypotenuse</p></div></a
           >
           <a href="#"
             ><div class="gridItem"><p>check triangle</p></div></a
