feat:can make triangle

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a href="hypotenuse.html"
             ><div class="gridItem"><p>hypotenuse</p></div></a
           >
-          <a href="#"
+          <a href="checkTraingle.html"
             ><div class="gridItem"><p>check triangle</p></div></a
           >
         </div>
