feat:triangle quiz

--- a/checkTraingle.html
+++ b/checkTraingle.html
@@ -22,7 +22,7 @@
           <button type="submit">Calculate</button>
         </form>
         <div class="result">
-          <p style="margin: 0;font-family: ;">Is Triangle?</p>
+          <p style="margin: 0;">Is Triangle?</p>
         </div>
       </section>
     </div>
