--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <a href="area.html"
             ><div class="gridItem"><p>Area</p></div></a
           >
-          <a href="#"
+          <a href="quiz.html"
             ><div class="gridItem"><p>Quiz</p></div></a
           >
         </div>
