fix:validate inputs

--- a/area.html
+++ b/area.html
@@ -17,13 +17,12 @@
             <label>Base:<input type="number" required /></label>
             <label>Height:<input type="number" required /></label>
           </div>
+          <p style="margin: 0; color: #dc2626" id="error"></p>
           <button type="submit">Calculate</button>
         </form>
         <div class="result">
           <label class="label">Area:</label>
-          <div class="formula">
-            1/2*base*height
-          </div>
+          <div class="formula">1/2*base*height</div>
         </div>
       </section>
     </div>
