--- a/checkTraingle.html
+++ b/checkTraingle.html
@@ -19,6 +19,7 @@
             <label><input type="number" required /></label>
             <label><input type="number" required /></label>
           </div>
+          <p style="margin:0;color: #dc2626" id="error"></p>
           <button type="submit">Calculate</button>
         </form>
         <div class="result">
